// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Goes to edit mode, handles input and calls action prop 1`] = `
<button
  class="c-button c-button--stripped c-addButton"
  data-testid="AddSubjectButton"
  type="button"
>
  Test
</button>
`;

exports[`Goes to edit mode, handles input and calls action prop 2`] = `
<div
  class="c-addButton__editMode"
>
  <input
    data-testid="addSubjectInputField"
    type="text"
    value="Elefant"
  />
  <button
    class="c-button c-button--stripped"
    type="button"
  >
    <svg
      class="c-icon"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Goes to edit mode, handles input and calls action prop 3`] = `
<div
  class="c-addButton__editMode"
>
  <input
    data-testid="addSubjectInputField"
    type="text"
    value="Elefant"
  />
  <button
    class="c-button c-button--stripped"
    disabled=""
    type="button"
  >
    <div
      class="c-spinner c-spinner--small"
    />
  </button>
</div>
`;
